--- a/content/post/2019-12-09-test-post.Rmd
+++ b/content/post/2019-12-09-test-post.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Test post!
+title: Test post 2!
 author: Jonathan
 date: '2019-12-09'
 slug: test-post
@@ -8,4 +8,4 @@ categories:
 tags: []
 ---
 
-Just a test post
+Just a test post. test2 
